--- a/locale/sr_SR/locale.xml
+++ b/locale/sr_SR/locale.xml
@@ -13,26 +13,30 @@
   -->
  
 <locale name="sr_SR" full_name="Cрпски">
-	<message key="plugins.generic.staticPages.displayName">Dodatak Statičke strane</message>
-	<message key="plugins.generic.staticPages.description">Ovaj dodatak omogućuje uređivanje statičkog sadržaja.</message>
-	<message key="plugins.generic.staticPages.pageTitle">Naslov</message>
-	<message key="plugins.generic.staticPages.content">Sadržaj</message>
+	<message key="plugins.generic.staticPages.displayName">Додатак Статичке стране</message>
+	<message key="plugins.generic.staticPages.description">Овај додатак омогућује уређивање статичког садржаја.</message>
+	<message key="plugins.generic.staticPages.pageTitle">Наслов</message>
+	<message key="plugins.generic.staticPages.content">Садржај</message>
 
-	<message key="plugins.generic.staticPages.path">Putanja</message>
-	<message key="plugins.generic.staticPages.requirement.tinymce"><![CDATA[<strong>TinyMCE dodatak mora biti instaliran i omogućen da biste uređivali sadržaj.</strong>]]></message>
+	<message key="plugins.generic.staticPages.path">Путања</message>
+	<message key="plugins.generic.staticPages.requirement.tinymce"><![CDATA[<strong>TinyMCE додатак мора бити инсталиран и омогућен да бисте уређивали садржај.</strong>]]></message>
 
-	<message key="plugins.generic.staticPages.editAddContent">Izmeni/dodaj sadržaj</message>
+	<message key="plugins.generic.staticPages.editAddContent">Измени/додај садржај</message>
 
-	<message key="plugins.generic.staticPages.addStaticPage">Dodaj statičku stranicu</message>
-	<message key="plugins.generic.staticPages.addNewPage">Dodaj novu stranicu</message>
-	<message key="plugins.generic.staticPages.editStaticPage">Izmeni statičku stranicu</message>	
+	<message key="plugins.generic.staticPages.addStaticPage">Додај статичку страницу</message>
+	<message key="plugins.generic.staticPages.addNewPage">Додај нову страницу</message>
+	<message key="plugins.generic.staticPages.editStaticPage">Измени статичку страницу</message>	
 
-	<message key="plugins.generic.staticPages.settingInstructions">Dole su prikazane sve statičke stranice koje ste napravili. Možete ih menjati i brisati koristeći linkove sa desne strane.</message>
-	<message key="plugins.generic.staticPages.editInstructions">Koristite formu ispod da biste dodali ili izmenili sadržaj.</message>
-	<message key="plugins.generic.staticPages.duplicatePath">Ova putanja već postoji za drugu stranicu.</message>
+	<message key="plugins.generic.staticPages.settingInstructions">Доле су приказане све статичке странице које сте направили. Можете их мењати и брисати користећи линкове са десне стране.</message>
+	<message key="plugins.generic.staticPages.editInstructions">Користите форму испод да бисте додали или изменили садржај.</message>
+	<message key="plugins.generic.staticPages.duplicatePath">Ова путања већ постоји за другу страницу.</message>
 	
-	<message key="plugins.generic.staticPages.pageSaved">Stranica je uspešno sačuvana.</message>
-	<message key="plugins.generic.staticPages.pageDeleted">Stranica je uspešno obrisana.</message>
+	<message key="plugins.generic.staticPages.pageSaved">Страница је успешно сачувана.</message>
+	<message key="plugins.generic.staticPages.pageDeleted">Страница је успешно обрисана.</message>
 	
-	<message key="plugins.generic.staticPages.noneExist">Stranica nije napravljena.</message>
+	<message key="plugins.generic.staticPages.noneExist">Страница није направљена.</message>
+	<message key="plugins.generic.staticPages.staticPages">Статичне стране</message>
+	<message key="plugins.generic.staticPages.noneCreated">Нема статичних страна.</message>
+	<message key="plugins.generic.staticPages.pathRegEx">Путања може садржати само алфанумеричке карактере и  '.', '/', '-', и '_' знаке.</message>
+	<message key="plugins.generic.staticPages.viewInstructions"><![CDATA[<p>Страница ће бити доступна на: <blockquote>{$pagesPath}</blockquote>...где је  %PATH% путања дефиниасна изнад. <strong>Напомена:</strong> Две стране не могу имати исту путању. Коришћење системских путања може довести до губитка приступа битним функцијама и подешавањима система.</p>]]></message>
 </locale>
