--- a/locale/es_ES/locale.xml
+++ b/locale/es_ES/locale.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../../../../lib/pkp/dtd/locale.dtd">
+
 <!--
-  * plugins/importexport/quickSubmit/locale/es_ES/locale.xml
+  * locale/es_ES/locale.xml
   *
-  * Copyright (c) 2013-2017 Simon Fraser University Library
+  * Copyright (c) 2014-2017 Simon Fraser University
   * Copyright (c) 2003-2017 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
-  * Credits: https://pkp.sfu.ca/wiki/index.php?title=OJS:_Spanish_(es_ES)
-  *
-  * Localization strings
+  * Localization strings. Credits: https://pkp.sfu.ca/wiki/index.php?title=OJS:_Spanish_(es_ES)
   -->
 
 <locale name="es_ES" full_name="Español (España)">
