--- a/locale/hu_HU/locale.po
+++ b/locale/hu_HU/locale.po
@@ -1,2 +1,72 @@
 msgid ""
-msgstr "X-Generator: Weblate\nMIME-Version: 1.0\nContent-Type: text/plain; charset=UTF-8\nContent-Transfer-Encoding: 8bit"
+msgstr ""
+"Project-Id-Version: \n"
+"Report-Msgid-Bugs-To: \n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"POT-Creation-Date: 2020-02-13T21:07:39+00:00\n"
+"PO-Revision-Date: 2020-02-13T21:07:39+00:00\n"
+"Language: \n"
+
+msgid "plugins.generic.staticPages.displayName"
+msgstr "Statikus oldalak plugin"
+
+msgid "plugins.generic.staticPages.description"
+msgstr "Ezzel a bővítménnyel tud statikus tartalmakat kezelni."
+
+msgid "plugins.generic.staticPages.staticPages"
+msgstr "Statikus oldalak"
+
+msgid "plugins.generic.staticPages.pageTitle"
+msgstr "Cím"
+
+msgid "plugins.generic.staticPages.content"
+msgstr "Tartalom"
+
+msgid "plugins.generic.staticPages.path"
+msgstr "Útvonal"
+
+msgid "plugins.generic.staticPages.requirement.tinymce"
+msgstr "<p><strong>A TinyMCE bővítményt telepíteni és engedélyezni kell a tartalom hozzáadása/szerkesztése érdekében.</strong></p>"
+
+msgid "plugins.generic.staticPages.editAddContent"
+msgstr "Tartalom hozzáadása/szerkesztése"
+
+msgid "plugins.generic.staticPages.addStaticPage"
+msgstr "Statikus oldal hozzáadása"
+
+msgid "plugins.generic.staticPages.addNewPage"
+msgstr "Új oldal hozzáadása"
+
+msgid "plugins.generic.staticPages.editStaticPage"
+msgstr "Statikus oldal szerkesztése"
+
+msgid "plugins.generic.staticPages.noneCreated"
+msgstr "Nem lett statikus oldal létrehozva."
+
+msgid "plugins.generic.staticPages.settingInstructions"
+msgstr "A lenti űrlapon láthatóak az eddig létrehozott statikus oldalak. A jobb oldalon található linkek segítségével tudja szerkeszteni vagy törölni az oldalakat."
+
+msgid "plugins.generic.staticPages.editInstructions"
+msgstr "Használja a lenti űrlapot oldaltartalom hozzáadásához/szerkesztéséhez."
+
+msgid "plugins.generic.staticPages.pathRegEx"
+msgstr "Az útvonalmező csak alfanumerikus karaktereket valamint '.', '/', '-', és '_' karaktereket tartalmazhat."
+
+msgid "plugins.generic.staticPages.viewInstructions"
+msgstr "<p>Ez az oldal elérhető lesz: <blockquote>{$pagesPath}</ blockquote> ... ahol a %PATH% a fent megadott elérési út. <strong> Megjegyzés:</strong> Nem lehet két oldalnak ugyanaz az útvonala. A rendszerbe épített útvonalak használatával elveszítheti a fontos funkciókhoz való hozzáférést.</p>"
+
+msgid "plugins.generic.staticPages.duplicatePath"
+msgstr "Ez az útvonal már létezik egy másik statikus oldalhoz."
+
+msgid "plugins.generic.staticPages.pageSaved"
+msgstr "Az oldal sikeresen mentve."
+
+msgid "plugins.generic.staticPages.pageDeleted"
+msgstr "Az oldal sikeresen törölve."
+
+msgid "plugins.generic.staticPages.noneExist"
+msgstr "Nem lettek oldalak létrehozva."
