--- a/locale/fr_CA/locale.po
+++ b/locale/fr_CA/locale.po
@@ -4,8 +4,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-30T15:49:00-07:00\n"
 "PO-Revision-Date: 2020-01-14 22:35+0000\n"
-"Last-Translator: Marie-Hélène Vézina [UdeMontréal] <marie-"
-"helene.vezina@umontreal.ca>\n"
+"Last-Translator: Marie-Hélène Vézina [UdeMontréal] <marie-helene."
+"vezina@umontreal.ca>\n"
 "Language-Team: French (Canada) <http://translate.pkp.sfu.ca/projects/plugins/"
 "static-pages-plugin/fr_CA/>\n"
 "Language: fr_CA\n"
@@ -20,6 +20,9 @@ msgstr "Plugiciel de pages statiques"
 
 msgid "plugins.generic.staticPages.description"
 msgstr "Ce plugiciel permet la gestion du contenu statique."
+
+msgid "plugins.generic.staticPages.staticPages"
+msgstr "Pages statiques"
 
 msgid "plugins.generic.staticPages.pageTitle"
 msgstr "Titre"
@@ -47,6 +50,9 @@ msgstr "Ajouter une nouvelle page"
 msgid "plugins.generic.staticPages.editStaticPage"
 msgstr "Modifier une page statique"
 
+msgid "plugins.generic.staticPages.noneCreated"
+msgstr "Aucune page statique n'a été créée."
+
 msgid "plugins.generic.staticPages.settingInstructions"
 msgstr ""
 "Le formulaire ci-dessous affiche toutes les pages statiques que vous avez "
@@ -54,7 +60,22 @@ msgstr ""
 "qui se trouvent dans la partie de droite."
 
 msgid "plugins.generic.staticPages.editInstructions"
-msgstr "Utiliser le formulaire ci-dessous pour ajouter/modifier le contenu de la page."
+msgstr ""
+"Utiliser le formulaire ci-dessous pour ajouter/modifier le contenu de la "
+"page."
+
+msgid "plugins.generic.staticPages.pathRegEx"
+msgstr ""
+"Le chemin d'accès ne peut contenir que des caractères alphanumériques, ainsi "
+"que «.», «/», «-»  et «_»."
+
+msgid "plugins.generic.staticPages.viewInstructions"
+msgstr ""
+"<p>Cette page sera accessible à : <blockquote>{$pagesPath} </blockquote>... "
+"où %PATH% est le chemin d'accès  inscrit plus haut. <strong>Note : </"
+"strong>Deux pages ne peuvent pas avoir le même chemin d'accès. L'utilisation "
+"de chemins d'accès intégrés au système peut vous faire perdre l'accès à des "
+"fonctionnalités importantes.</p>"
 
 msgid "plugins.generic.staticPages.duplicatePath"
 msgstr "Le chemin d'accès existe déjà pour une autre page statique."
@@ -67,22 +88,3 @@ msgstr "Page supprimée avec succès."
 
 msgid "plugins.generic.staticPages.noneExist"
 msgstr "Aucune page n'a été créée"
-
-msgid "plugins.generic.staticPages.staticPages"
-msgstr "Pages statiques"
-
-msgid "plugins.generic.staticPages.noneCreated"
-msgstr "Aucune page statique n'a été créée."
-
-msgid "plugins.generic.staticPages.pathRegEx"
-msgstr ""
-"Le chemin d'accès ne peut contenir que des caractères alphanumériques, ainsi "
-"que «.», «/», «-»  et «_»."
-
-msgid "plugins.generic.staticPages.viewInstructions"
-msgstr ""
-"<p>Cette page sera accessible à : <blockquote>{$pagesPath} </blockquote>... "
-"où %PATH% est le chemin d'accès  inscrit plus haut. <strong>Note : </strong>"
-"Deux pages ne peuvent pas avoir le même chemin d'accès. L'utilisation de "
-"chemins d'accès intégrés au système peut vous faire perdre l'accès à des "
-"fonctionnalités importantes.</p>"
