--- a/locale/cs_CZ/locale.po
+++ b/locale/cs_CZ/locale.po
@@ -6,8 +6,8 @@ msgstr ""
 "POT-Creation-Date: 2019-11-19T11:05:23+00:00\n"
 "PO-Revision-Date: 2022-08-09 12:25+0000\n"
 "Last-Translator: Jiří Dlouhý <jiri.dlouhy@czp.cuni.cz>\n"
-"Language-Team: Czech <http://translate.pkp.sfu.ca/projects/plugins/"
-"static-pages-plugin/cs_CZ/>\n"
+"Language-Team: Czech <http://translate.pkp.sfu.ca/projects/plugins/static-"
+"pages-plugin/cs_CZ/>\n"
 "Language: cs_CZ\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,6 +21,9 @@ msgstr "Plugin statických stránek"
 msgid "plugins.generic.staticPages.description"
 msgstr "Tento plugin umožňuje správu statického obsahu."
 
+msgid "plugins.generic.staticPages.staticPages"
+msgstr "Statické stránky"
+
 msgid "plugins.generic.staticPages.pageTitle"
 msgstr "Název"
 
@@ -32,8 +35,8 @@ msgstr "Cesta"
 
 msgid "plugins.generic.staticPages.requirement.tinymce"
 msgstr ""
-"<p><strong>Pro přidání/editaci obsahu musí být nainstalován plugin "
-"TinyMCE.</strong></p>"
+"<p><strong>Pro přidání/editaci obsahu musí být nainstalován plugin TinyMCE.</"
+"strong></p>"
 
 msgid "plugins.generic.staticPages.editAddContent"
 msgstr "Editovat/přidat obsah"
@@ -47,11 +50,27 @@ msgstr "Přidat novou stránku"
 msgid "plugins.generic.staticPages.editStaticPage"
 msgstr "Editovat statickou stránku"
 
+msgid "plugins.generic.staticPages.noneCreated"
+msgstr "Nebyly vytvořeny žádné statické stránky."
+
 msgid "plugins.generic.staticPages.settingInstructions"
-msgstr "Formulář níže ukazuje všechny statické stránky, které jste vytvořil. Tyto stránky můžete editovat nebo smazat použitím odkazů na pravé straně."
+msgstr ""
+"Formulář níže ukazuje všechny statické stránky, které jste vytvořil. Tyto "
+"stránky můžete editovat nebo smazat použitím odkazů na pravé straně."
 
 msgid "plugins.generic.staticPages.editInstructions"
 msgstr "Pro přidání/editaci obsahu použijte níže dostupný formulář."
+
+msgid "plugins.generic.staticPages.pathRegEx"
+msgstr ""
+"Cesta musí obsahovat pouze alfanumerické znaky a znaky „.“, „/“, „-“ a „_“."
+
+msgid "plugins.generic.staticPages.viewInstructions"
+msgstr ""
+"<p>Tato stránka bude dostupná na adrese:<blockquote>{$pagesPath}</"
+"blockquote>... kde %PATH% je cesta zadaná výše. <strong>Poznámka:</"
+"strong>Žádná dvě stránky nemohou mít stejnou cestu. Použití cest vestavěných "
+"do systému může způsobit ztrátu přístupu k důležitým funkcím.</p>"
 
 msgid "plugins.generic.staticPages.duplicatePath"
 msgstr "Tato cesta již existuje pro jinou statickou stránku."
@@ -64,20 +83,3 @@ msgstr "Stránka úspěšně smazána."
 
 msgid "plugins.generic.staticPages.noneExist"
 msgstr "Nebyly vytvořeny žádné stránky"
-
-msgid "plugins.generic.staticPages.staticPages"
-msgstr "Statické stránky"
-
-msgid "plugins.generic.staticPages.noneCreated"
-msgstr "Nebyly vytvořeny žádné statické stránky."
-
-msgid "plugins.generic.staticPages.pathRegEx"
-msgstr ""
-"Cesta musí obsahovat pouze alfanumerické znaky a znaky „.“, „/“, „-“ a „_“."
-
-msgid "plugins.generic.staticPages.viewInstructions"
-msgstr ""
-"<p>Tato stránka bude dostupná na adrese:<blockquote>{$pagesPath}</blockquote>"
-"... kde %PATH% je cesta zadaná výše. <strong>Poznámka:</strong>Žádná dvě "
-"stránky nemohou mít stejnou cestu. Použití cest vestavěných do systému může "
-"způsobit ztrátu přístupu k důležitým funkcím.</p>"
