--- a/locale/da_DK/locale.po
+++ b/locale/da_DK/locale.po
@@ -5,8 +5,8 @@ msgstr ""
 "POT-Creation-Date: 2019-11-19T11:05:23+00:00\n"
 "PO-Revision-Date: 2020-02-08 03:34+0000\n"
 "Last-Translator: Niels Erik Frederiksen <nef@kb.dk>\n"
-"Language-Team: Danish <http://translate.pkp.sfu.ca/projects/plugins/"
-"static-pages-plugin/da/>\n"
+"Language-Team: Danish <http://translate.pkp.sfu.ca/projects/plugins/static-"
+"pages-plugin/da/>\n"
 "Language: da_DK\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,6 +19,9 @@ msgstr "Statisk side-plugin"
 
 msgid "plugins.generic.staticPages.description"
 msgstr "Denne plugin giver mulighed for håndtering af statisk indhold."
+
+msgid "plugins.generic.staticPages.staticPages"
+msgstr "Statiske sider"
 
 msgid "plugins.generic.staticPages.pageTitle"
 msgstr "Titel"
@@ -46,11 +49,28 @@ msgstr "Tilføj ny side"
 msgid "plugins.generic.staticPages.editStaticPage"
 msgstr "Redigér statisk side"
 
+msgid "plugins.generic.staticPages.noneCreated"
+msgstr "Ingen statisk side er blevet oprettet."
+
 msgid "plugins.generic.staticPages.settingInstructions"
-msgstr "Skemaet nedenfor viser alle de statiske sider, du har oprettet. Du kan redigere eller slette siderne ved at anvende linkene til højre."
+msgstr ""
+"Skemaet nedenfor viser alle de statiske sider, du har oprettet. Du kan "
+"redigere eller slette siderne ved at anvende linkene til højre."
 
 msgid "plugins.generic.staticPages.editInstructions"
 msgstr "Vælg skemaet nedenfor for at tilføje/redigere sideindhold."
+
+msgid "plugins.generic.staticPages.pathRegEx"
+msgstr ""
+"Sti-feltet må kun indeholde alfanumeriske karakterer samt '.', '/', '-', og "
+"'_'."
+
+msgid "plugins.generic.staticPages.viewInstructions"
+msgstr ""
+"<p>Siden kan tilgås via: <blockquote>{$pagesPath}</blockquote>...hvor %PATH% "
+"er den sti, du vælger. <strong>Bemærk:</strong> to sider kan ikke have den "
+"same sti. Brugen af stier, der er indbygget i systemet, kan medføre, at du "
+"mister adgang til vigtige funktioner.</p>"
 
 msgid "plugins.generic.staticPages.duplicatePath"
 msgstr "Denne sti er allerede valgt i forbindelse med en anden statisk side."
@@ -63,15 +83,3 @@ msgstr "Siden er slettet."
 
 msgid "plugins.generic.staticPages.noneExist"
 msgstr "Ingen sider er blevet oprettet"
-
-msgid "plugins.generic.staticPages.staticPages"
-msgstr "Statiske sider"
-
-msgid "plugins.generic.staticPages.noneCreated"
-msgstr "Ingen statisk side er blevet oprettet."
-
-msgid "plugins.generic.staticPages.viewInstructions"
-msgstr "<p>Siden kan tilgås via: <blockquote>{$pagesPath}</blockquote>...hvor %PATH% er den sti, du vælger. <strong>Bemærk:</strong> to sider kan ikke have den same sti. Brugen af stier, der er indbygget i systemet, kan medføre, at du mister adgang til vigtige funktioner.</p>"
-
-msgid "plugins.generic.staticPages.pathRegEx"
-msgstr "Sti-feltet må kun indeholde alfanumeriske karakterer samt '.', '/', '-', og '_'."
