--- a/locale/el_GR/locale.po
+++ b/locale/el_GR/locale.po
@@ -2,20 +2,21 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2019-11-19T11:05:23+00:00\n"
+"PO-Revision-Date: 2019-11-19T11:05:23+00:00\n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2019-11-19T11:05:23+00:00\n"
-"PO-Revision-Date: 2019-11-19T11:05:23+00:00\n"
-"Language: \n"
 
 msgid "plugins.generic.staticPages.displayName"
 msgstr "Διαχείριση Στατικών Σελίδων"
 
 msgid "plugins.generic.staticPages.description"
-msgstr "Αυτό το Πρόσθετο επιτρέπει τη δημιουργία και διαχείριση στατικών σελίδων."
+msgstr ""
+"Αυτό το Πρόσθετο επιτρέπει τη δημιουργία και διαχείριση στατικών σελίδων."
 
 msgid "plugins.generic.staticPages.staticPages"
 msgstr "Στατικές Σελίδες"
@@ -30,7 +31,9 @@ msgid "plugins.generic.staticPages.path"
 msgstr "Διαδρομή"
 
 msgid "plugins.generic.staticPages.requirement.tinymce"
-msgstr "<strong>Θα πρέπει να εγκατασταθεί και ενεργοποιηθεί το TinyMCE Plugin για να είναι δυνατή η προσθήκη/επεξεργασία του περιεχομένου.</strong>"
+msgstr ""
+"<strong>Θα πρέπει να εγκατασταθεί και ενεργοποιηθεί το TinyMCE Plugin για να "
+"είναι δυνατή η προσθήκη/επεξεργασία του περιεχομένου.</strong>"
 
 msgid "plugins.generic.staticPages.editAddContent"
 msgstr "Προσθήκη/επεξεργασία περιεχομένου"
@@ -48,16 +51,27 @@ msgid "plugins.generic.staticPages.noneCreated"
 msgstr "Δεν έχουν δημιουργηθεί στατικές σελίδες."
 
 msgid "plugins.generic.staticPages.settingInstructions"
-msgstr "Η παρακάτω φόρμα παρουσίαζει όλες τις στατικές σελίδες που έχετε δημιουργήσει. Μπορείτε να επεξεργαστείτε ή διαγράψετε τις σελίδες χρησιμοποιώντας τους συνδέσμους στη δεξιά πλευρά."
+msgstr ""
+"Η παρακάτω φόρμα παρουσίαζει όλες τις στατικές σελίδες που έχετε "
+"δημιουργήσει. Μπορείτε να επεξεργαστείτε ή διαγράψετε τις σελίδες "
+"χρησιμοποιώντας τους συνδέσμους στη δεξιά πλευρά."
 
 msgid "plugins.generic.staticPages.editInstructions"
-msgstr "Χρησιμοποιήστε την παρακάτω φόρμα για την προσθήκη/επεξεργασία του περιεχομένου μιας στατικής σελίδας."
+msgstr ""
+"Χρησιμοποιήστε την παρακάτω φόρμα για την προσθήκη/επεξεργασία του "
+"περιεχομένου μιας στατικής σελίδας."
 
 msgid "plugins.generic.staticPages.pathRegEx"
-msgstr "Το πεδίο της διαδρομής πρέπει να περιλαμβάνει μόνο αλφαριθμητικούς χαρακτήρες ή '.', '/', '-', και '_'."
+msgstr ""
+"Το πεδίο της διαδρομής πρέπει να περιλαμβάνει μόνο αλφαριθμητικούς "
+"χαρακτήρες ή '.', '/', '-', και '_'."
 
 msgid "plugins.generic.staticPages.viewInstructions"
-msgstr "<p>Η σελίδα αυτή θα είναι διαθέσιμη στο: <blockquote>{$pagesPath}</blockquote>...όπου %PATH% είναι η διαδρομή που εισάγατε προηγουμένως. <strong>Σημείωση:</strong> Δεν δύναται 2 σείδες να έχουν την ίδια διαδρομή.</p>"
+msgstr ""
+"<p>Η σελίδα αυτή θα είναι διαθέσιμη στο: <blockquote>{$pagesPath}</"
+"blockquote>...όπου %PATH% είναι η διαδρομή που εισάγατε προηγουμένως. "
+"<strong>Σημείωση:</strong> Δεν δύναται 2 σείδες να έχουν την ίδια διαδρομή.</"
+"p>"
 
 msgid "plugins.generic.staticPages.duplicatePath"
 msgstr "Αυτή η διαδρομή (path) χρησιμοποιείται ήδη από άλλη στατική σελίδα."
