--- a/locale/en_US/locale.po
+++ b/locale/en_US/locale.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2019-09-30T15:49:00-07:00\n"
+"PO-Revision-Date: 2019-09-30T15:49:00-07:00\n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2019-09-30T15:49:00-07:00\n"
-"PO-Revision-Date: 2019-09-30T15:49:00-07:00\n"
-"Language: \n"
 
 msgid "plugins.generic.staticPages.displayName"
 msgstr "Static Pages Plugin"
@@ -30,7 +30,9 @@ msgid "plugins.generic.staticPages.path"
 msgstr "Path"
 
 msgid "plugins.generic.staticPages.requirement.tinymce"
-msgstr "<p><strong>The TinyMCE Plugin must be installed and enabled in order to add/edit content.</strong></p>"
+msgstr ""
+"<p><strong>The TinyMCE Plugin must be installed and enabled in order to add/"
+"edit content.</strong></p>"
 
 msgid "plugins.generic.staticPages.editAddContent"
 msgstr "Edit/Add Content"
@@ -48,16 +50,24 @@ msgid "plugins.generic.staticPages.noneCreated"
 msgstr "No static pages have been created."
 
 msgid "plugins.generic.staticPages.settingInstructions"
-msgstr "The form below shows you all the static pages you have created.  You can edit or delete the pages using the links on the right-hand side."
+msgstr ""
+"The form below shows you all the static pages you have created.  You can "
+"edit or delete the pages using the links on the right-hand side."
 
 msgid "plugins.generic.staticPages.editInstructions"
 msgstr "Use the form below to add/edit page content."
 
 msgid "plugins.generic.staticPages.pathRegEx"
-msgstr "The path field must contain only alphanumeric characters plus '.', '/', '-', and '_'."
+msgstr ""
+"The path field must contain only alphanumeric characters plus '.', '/', '-', "
+"and '_'."
 
 msgid "plugins.generic.staticPages.viewInstructions"
-msgstr "<p>This page will be accessible at: <blockquote>{$pagesPath}</blockquote>...where %PATH% is the path entered above. <strong>Note:</strong> No two pages can have the same path. Using paths that are built into the system may cause you to lose access to important functions.</p>"
+msgstr ""
+"<p>This page will be accessible at: <blockquote>{$pagesPath}</blockquote>..."
+"where %PATH% is the path entered above. <strong>Note:</strong> No two pages "
+"can have the same path. Using paths that are built into the system may cause "
+"you to lose access to important functions.</p>"
 
 msgid "plugins.generic.staticPages.duplicatePath"
 msgstr "This path already exists for another static page."
