--- a/locale/fa_IR/locale.po
+++ b/locale/fa_IR/locale.po
@@ -2,20 +2,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2019-11-19T11:05:23+00:00\n"
+"PO-Revision-Date: 2019-11-19T11:05:23+00:00\n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2019-11-19T11:05:23+00:00\n"
-"PO-Revision-Date: 2019-11-19T11:05:23+00:00\n"
-"Language: \n"
 
 msgid "plugins.generic.staticPages.displayName"
 msgstr "پلاگین صفحات استاتیک"
 
 msgid "plugins.generic.staticPages.description"
 msgstr "با این پلاگین میتوان محتوای استاتیک را اداره کرد"
+
+msgid "plugins.generic.staticPages.staticPages"
+msgstr ""
 
 msgid "plugins.generic.staticPages.pageTitle"
 msgstr "عنوان"
@@ -27,7 +30,9 @@ msgid "plugins.generic.staticPages.path"
 msgstr "مسیر"
 
 msgid "plugins.generic.staticPages.requirement.tinymce"
-msgstr "<strong>قبل از اینکه بتوانیم محتوائی را اضافه یا حذف کنیم باید پلاگین تینی ام سی ای را فعال سازیم.</strong>"
+msgstr ""
+"<strong>قبل از اینکه بتوانیم محتوائی را اضافه یا حذف کنیم باید پلاگین تینی "
+"ام سی ای را فعال سازیم.</strong>"
 
 msgid "plugins.generic.staticPages.editAddContent"
 msgstr "ویرایش یا افزودن محتوا"
@@ -41,11 +46,22 @@ msgstr "افزودن صفحه جدید"
 msgid "plugins.generic.staticPages.editStaticPage"
 msgstr "ویرایش صفجه استاتیک"
 
+msgid "plugins.generic.staticPages.noneCreated"
+msgstr ""
+
 msgid "plugins.generic.staticPages.settingInstructions"
-msgstr "در فرم زیر تمام صفحات استاتیک ایجاد شده را میبینید. با استفاده از لینک های سمت راست میتوانید صفحات را ویرایش یا حذف کنید."
+msgstr ""
+"در فرم زیر تمام صفحات استاتیک ایجاد شده را میبینید. با استفاده از لینک های "
+"سمت راست میتوانید صفحات را ویرایش یا حذف کنید."
 
 msgid "plugins.generic.staticPages.editInstructions"
 msgstr "با استفاده از فرم زیر میتوانید محتوای صفحه را اضافه یا ویرایش کنید"
+
+msgid "plugins.generic.staticPages.pathRegEx"
+msgstr ""
+
+msgid "plugins.generic.staticPages.viewInstructions"
+msgstr ""
 
 msgid "plugins.generic.staticPages.duplicatePath"
 msgstr "مسیر مشخص شده هم اکنون وجود دارد."
