--- a/locale/fr_FR/locale.po
+++ b/locale/fr_FR/locale.po
@@ -5,8 +5,8 @@ msgstr ""
 "POT-Creation-Date: 2019-11-19T11:05:23+00:00\n"
 "PO-Revision-Date: 2020-08-12 13:48+0000\n"
 "Last-Translator: Paul Heckler <paul.d.heckler@gmail.com>\n"
-"Language-Team: French <http://translate.pkp.sfu.ca/projects/plugins/"
-"static-pages-plugin/fr/>\n"
+"Language-Team: French <http://translate.pkp.sfu.ca/projects/plugins/static-"
+"pages-plugin/fr/>\n"
 "Language: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,6 +19,9 @@ msgstr "Plugiciel de pages statiques"
 
 msgid "plugins.generic.staticPages.description"
 msgstr "Ce plugiciel permet la gestion du contenu statique."
+
+msgid "plugins.generic.staticPages.staticPages"
+msgstr "Pages statiques"
 
 msgid "plugins.generic.staticPages.pageTitle"
 msgstr "Titre"
@@ -46,11 +49,32 @@ msgstr "Ajouter une nouvelle page"
 msgid "plugins.generic.staticPages.editStaticPage"
 msgstr "Modifier une page statique"
 
+msgid "plugins.generic.staticPages.noneCreated"
+msgstr "Aucune page statique n'a été créée."
+
 msgid "plugins.generic.staticPages.settingInstructions"
-msgstr "Le formulaire ci-dessous fait apparaître toutes les pages statiques que vous avez créées. Vous pouvez modifier ou supprimer les pages en utilisant les liens qui se trouvent dans la partie de droite."
+msgstr ""
+"Le formulaire ci-dessous fait apparaître toutes les pages statiques que vous "
+"avez créées. Vous pouvez modifier ou supprimer les pages en utilisant les "
+"liens qui se trouvent dans la partie de droite."
 
 msgid "plugins.generic.staticPages.editInstructions"
-msgstr "Utiliser le formulaire ci-dessous pour ajouter/modifier le contenu de la page."
+msgstr ""
+"Utiliser le formulaire ci-dessous pour ajouter/modifier le contenu de la "
+"page."
+
+msgid "plugins.generic.staticPages.pathRegEx"
+msgstr ""
+"Le chemin d'accès ne peut contenir que des caractères alphanumériques, plus "
+"&quot;.&quot;, &quot;/&quot; et &quot;_&quot;."
+
+msgid "plugins.generic.staticPages.viewInstructions"
+msgstr ""
+"<p>Cette page sera accessible à : <blockquote>{$pagesPath} </blockquote>... "
+"où %PATH% est le chemin d'accès  inscrit plus haut. <strong>Note : </"
+"strong>Deux pages ne peuvent pas avoir le même chemin d'accès. L'utilisation "
+"de chemins d'accès intégrés au système peut vous faire perdre l'accès à des "
+"fonctionnalités importantes.</p>"
 
 msgid "plugins.generic.staticPages.duplicatePath"
 msgstr "Le chemin d'accès existe déjà pour une autre page statique."
@@ -63,20 +87,3 @@ msgstr "Page supprimée avec succès."
 
 msgid "plugins.generic.staticPages.noneExist"
 msgstr "Aucune page n'a été créée"
-
-msgid "plugins.generic.staticPages.staticPages"
-msgstr "Pages statiques"
-
-msgid "plugins.generic.staticPages.noneCreated"
-msgstr "Aucune page statique n'a été créée."
-
-msgid "plugins.generic.staticPages.pathRegEx"
-msgstr "Le chemin d'accès ne peut contenir que des caractères alphanumériques, plus &quot;.&quot;, &quot;/&quot; et &quot;_&quot;."
-
-msgid "plugins.generic.staticPages.viewInstructions"
-msgstr ""
-"<p>Cette page sera accessible à : <blockquote>{$pagesPath} </blockquote>... "
-"où %PATH% est le chemin d'accès  inscrit plus haut. <strong>Note : </strong>"
-"Deux pages ne peuvent pas avoir le même chemin d'accès. L'utilisation de "
-"chemins d'accès intégrés au système peut vous faire perdre l'accès à des "
-"fonctionnalités importantes.</p>"
