--- a/locale/ja_JP/locale.po
+++ b/locale/ja_JP/locale.po
@@ -6,8 +6,8 @@ msgstr ""
 "POT-Creation-Date: 2019-11-19T11:05:24+00:00\n"
 "PO-Revision-Date: 2021-12-11 17:15+0000\n"
 "Last-Translator: TAKASHI IMAGIRE <imagire@gmail.com>\n"
-"Language-Team: Japanese <http://translate.pkp.sfu.ca/projects/plugins/"
-"static-pages-plugin/ja_JP/>\n"
+"Language-Team: Japanese <http://translate.pkp.sfu.ca/projects/plugins/static-"
+"pages-plugin/ja_JP/>\n"
 "Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,6 +21,9 @@ msgstr "統計ページプラグイン"
 msgid "plugins.generic.staticPages.description"
 msgstr "このプラグインは統計のコンテンツ管理ができます。"
 
+msgid "plugins.generic.staticPages.staticPages"
+msgstr "静的ページ"
+
 msgid "plugins.generic.staticPages.pageTitle"
 msgstr "タイトル"
 
@@ -32,7 +35,8 @@ msgstr "パス"
 
 msgid "plugins.generic.staticPages.requirement.tinymce"
 msgstr ""
-"<p><strong>コンテンツを編集・追加するためには，TinyMCE プラグインがインストールされていなければなりません。</strong></p>"
+"<p><strong>コンテンツを編集・追加するためには，TinyMCE プラグインがインストー"
+"ルされていなければなりません。</strong></p>"
 
 msgid "plugins.generic.staticPages.editAddContent"
 msgstr "コンテンツの編集・追加"
@@ -46,11 +50,28 @@ msgstr "新規ページの作成"
 msgid "plugins.generic.staticPages.editStaticPage"
 msgstr "統計ページの編集"
 
+msgid "plugins.generic.staticPages.noneCreated"
+msgstr "静的ページは作成されていません。"
+
 msgid "plugins.generic.staticPages.settingInstructions"
-msgstr "下記のフォームには作成された全ての統計ページが表示されています。右のリンクを使用してページの編集および削除が可能です。"
+msgstr ""
+"下記のフォームには作成された全ての統計ページが表示されています。右のリンクを"
+"使用してページの編集および削除が可能です。"
 
 msgid "plugins.generic.staticPages.editInstructions"
 msgstr "ページを追加・編集するために下記のフォームを使用してください。"
+
+msgid "plugins.generic.staticPages.pathRegEx"
+msgstr ""
+"パスフィールドには、英数字に加えて、「.」、「/」、「-」や「_」を含める必要が"
+"あります。"
+
+msgid "plugins.generic.staticPages.viewInstructions"
+msgstr ""
+"<p>このページは以下の場所からアクセスできます: <blockquote>{$pagesPath}</"
+"blockquote>...ここで、%PATH%は上記で入力したパスです。<strong>注:</strong>  2"
+"つのページが同じパスを持つことはできません。システムに組み込まれているパスを"
+"使用すると、重要な機能にアクセスできなくなる可能性があります。</p>"
 
 msgid "plugins.generic.staticPages.duplicatePath"
 msgstr "この path は他の統計ページで既に使用されています。"
@@ -63,18 +84,3 @@ msgstr "ページは正常に削除されました。"
 
 msgid "plugins.generic.staticPages.noneExist"
 msgstr "ページが作成されていません"
-
-msgid "plugins.generic.staticPages.viewInstructions"
-msgstr ""
-"<p>このページは以下の場所からアクセスできます: <blockquote>{$pagesPath}</blockquote>...ここで、%PATH%は"
-"上記で入力したパスです。<strong>注:</strong>  "
-"2つのページが同じパスを持つことはできません。システムに組み込まれているパスを使用すると、重要な機能にアクセスできなくなる可能性があります。</p>"
-
-msgid "plugins.generic.staticPages.pathRegEx"
-msgstr "パスフィールドには、英数字に加えて、「.」、「/」、「-」や「_」を含める必要があります。"
-
-msgid "plugins.generic.staticPages.noneCreated"
-msgstr "静的ページは作成されていません。"
-
-msgid "plugins.generic.staticPages.staticPages"
-msgstr "静的ページ"
