--- a/locale/nb_NO/locale.po
+++ b/locale/nb_NO/locale.po
@@ -4,8 +4,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-11-19T11:05:24+00:00\n"
 "PO-Revision-Date: 2021-01-30 11:53+0000\n"
-"Last-Translator: FRITT, University of Oslo Library <fritt-"
-"info@journals.uio.no>\n"
+"Last-Translator: FRITT, University of Oslo Library <fritt-info@journals.uio."
+"no>\n"
 "Language-Team: Norwegian Bokmål <http://translate.pkp.sfu.ca/projects/"
 "plugins/static-pages-plugin/nb_NO/>\n"
 "Language: nb_NO\n"
@@ -20,6 +20,9 @@ msgstr "Programutvidelse for statiske sider"
 
 msgid "plugins.generic.staticPages.description"
 msgstr "Dette programtillegget lar deg administrere statiske sider."
+
+msgid "plugins.generic.staticPages.staticPages"
+msgstr "Statiske sider"
 
 msgid "plugins.generic.staticPages.pageTitle"
 msgstr "Tittel"
@@ -47,6 +50,9 @@ msgstr "Legg til ny side"
 msgid "plugins.generic.staticPages.editStaticPage"
 msgstr "Endre statisk side"
 
+msgid "plugins.generic.staticPages.noneCreated"
+msgstr "Ingen statiske sider er opprettet."
+
 msgid "plugins.generic.staticPages.settingInstructions"
 msgstr ""
 "Oversikten nedenfor viser alle de statiske sidene du har laget. Du kan endre "
@@ -54,6 +60,18 @@ msgstr ""
 
 msgid "plugins.generic.staticPages.editInstructions"
 msgstr "Bruk skjemaet nedenfor for å legge til eller endre innhold."
+
+msgid "plugins.generic.staticPages.pathRegEx"
+msgstr ""
+"Stien må inneholde kun tall og bokstaver, samt punktum '.', skråstrek mot "
+"høyre '/', bindestrek '-' og understrek '_'."
+
+msgid "plugins.generic.staticPages.viewInstructions"
+msgstr ""
+"<p>Siden kan besøkes via <blockquote>{$pagesPath}</blockquote> der %STI% er "
+"stien som er lagt til over. <strong>Merk:</strong> To sider kan ikke ha "
+"samme sti. Bruker du stier som er bygget inn i systemet, kan du miste "
+"tilgang til viktige funksjoner.</p>"
 
 msgid "plugins.generic.staticPages.duplicatePath"
 msgstr "Denne stien finnes allerede for en annen statisk side."
@@ -66,21 +84,3 @@ msgstr "Siden ble slettet."
 
 msgid "plugins.generic.staticPages.noneExist"
 msgstr "Ingen sider har blitt opprettet"
-
-msgid "plugins.generic.staticPages.viewInstructions"
-msgstr ""
-"<p>Siden kan besøkes via <blockquote>{$pagesPath}</blockquote> der %STI% er "
-"stien som er lagt til over. <strong>Merk:</strong> To sider kan ikke ha "
-"samme sti. Bruker du stier som er bygget inn i systemet, kan du miste "
-"tilgang til viktige funksjoner.</p>"
-
-msgid "plugins.generic.staticPages.pathRegEx"
-msgstr ""
-"Stien må inneholde kun tall og bokstaver, samt punktum '.', skråstrek mot "
-"høyre '/', bindestrek '-' og understrek '_'."
-
-msgid "plugins.generic.staticPages.noneCreated"
-msgstr "Ingen statiske sider er opprettet."
-
-msgid "plugins.generic.staticPages.staticPages"
-msgstr "Statiske sider"
