--- a/locale/sl_SI/locale.po
+++ b/locale/sl_SI/locale.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2019-11-19T11:05:25+00:00\n"
+"PO-Revision-Date: 2019-11-19T11:05:25+00:00\n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2019-11-19T11:05:25+00:00\n"
-"PO-Revision-Date: 2019-11-19T11:05:25+00:00\n"
-"Language: \n"
 
 msgid "plugins.generic.staticPages.displayName"
 msgstr "Vtičink za statične strani"
@@ -30,7 +30,9 @@ msgid "plugins.generic.staticPages.path"
 msgstr "Pot"
 
 msgid "plugins.generic.staticPages.requirement.tinymce"
-msgstr "<p><strong>Vtičnik TinyMCE mora biti nameščeni in omogočen, da lahko dodajete in urejate vsebino.</strong></p>"
+msgstr ""
+"<p><strong>Vtičnik TinyMCE mora biti nameščeni in omogočen, da lahko "
+"dodajete in urejate vsebino.</strong></p>"
 
 msgid "plugins.generic.staticPages.editAddContent"
 msgstr "Uredi/dodaj vsebino"
@@ -48,16 +50,23 @@ msgid "plugins.generic.staticPages.noneCreated"
 msgstr "Ustvarjene ni bilo še nobene strani."
 
 msgid "plugins.generic.staticPages.settingInstructions"
-msgstr "Spodaj vidite vse statične strani, ki so bile ustvarjene. S klikom na desni strani lahko urejate ali odstranite strani."
+msgstr ""
+"Spodaj vidite vse statične strani, ki so bile ustvarjene. S klikom na desni "
+"strani lahko urejate ali odstranite strani."
 
 msgid "plugins.generic.staticPages.editInstructions"
 msgstr "Za dodajanje ali urejanje vsebine strani uporabite obrazec spodaj."
 
 msgid "plugins.generic.staticPages.pathRegEx"
-msgstr "Polje pot lahko vsebuje le alfanumerične znake ter '.', '/', '-' in '_'."
+msgstr ""
+"Polje pot lahko vsebuje le alfanumerične znake ter '.', '/', '-' in '_'."
 
 msgid "plugins.generic.staticPages.viewInstructions"
-msgstr "<p>Ta stran bo dostopna na : <blockquote>{$pagesPath}</blockquote>...kjer je %PATH% pot, ki ste jo vpisali zgoraj. <strong>Opozorilo:</strong> Dve strani ne smeta imeti enake poti. Uporaba poti, ki so vgrajene v sistem, lahko povzroči, da izgubite distop do pomembnih funkcionalnosti.</p>"
+msgstr ""
+"<p>Ta stran bo dostopna na : <blockquote>{$pagesPath}</blockquote>...kjer je "
+"%PATH% pot, ki ste jo vpisali zgoraj. <strong>Opozorilo:</strong> Dve strani "
+"ne smeta imeti enake poti. Uporaba poti, ki so vgrajene v sistem, lahko "
+"povzroči, da izgubite distop do pomembnih funkcionalnosti.</p>"
 
 msgid "plugins.generic.staticPages.duplicatePath"
 msgstr "To pot že uporablja druga statična stran."
