--- a/locale/sv_SE/locale.po
+++ b/locale/sv_SE/locale.po
@@ -9,7 +9,6 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 3.9.1\n"
 
 msgid "plugins.generic.staticPages.displayName"
 msgstr "Plugin för statiska sidor"
@@ -60,9 +59,16 @@ msgstr "Använd formuläret nedan för att lägga till/redigera innehåll."
 
 msgid "plugins.generic.staticPages.pathRegEx"
 msgstr ""
+"Fältet för sökvägen får bara innehålla alfanumerisk tecken plus '.', '/', '-"
+"', och '_'."
 
 msgid "plugins.generic.staticPages.viewInstructions"
 msgstr ""
+"<p>Sidan är tillgänglig via: "
+"<blockquote>{$pagesPath}</blockquote>"
+".där %PATH% är sökvägen som har angetts ovan. <strong>Observera:</strong> "
+"Två sidor kan inte ha samma sökväg. Om systemets inbyggda sökvägar används "
+"kan det orsaka att du förlorar till gång till viktiga funktioner.</p>"
 
 msgid "plugins.generic.staticPages.duplicatePath"
 msgstr "Sökvägen finns redan för en annan statisk sida."
