--- a/locale/it_IT/locale.po
+++ b/locale/it_IT/locale.po
@@ -5,14 +5,13 @@ msgstr ""
 "POT-Creation-Date: 2019-11-19T11:05:24+00:00\n"
 "PO-Revision-Date: 2019-12-29 17:34+0000\n"
 "Last-Translator: Lucia Steele <lucia.steele@aboutscience.eu>\n"
-"Language-Team: Italian <http://translate.pkp.sfu.ca/projects/plugins/"
-"static-pages-plugin/it/>\n"
+"Language-Team: Italian <http://translate.pkp.sfu.ca/projects/plugins/static-"
+"pages-plugin/it/>\n"
 "Language: it_IT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 3.9.1\n"
 
 msgid "plugins.generic.staticPages.displayName"
 msgstr "Pagine statiche"
@@ -30,7 +29,7 @@ msgid "plugins.generic.staticPages.content"
 msgstr "Contenuto"
 
 msgid "plugins.generic.staticPages.path"
-msgstr "Path"
+msgstr "Percorso"
 
 msgid "plugins.generic.staticPages.requirement.tinymce"
 msgstr ""
@@ -65,10 +64,11 @@ msgstr ""
 
 msgid "plugins.generic.staticPages.viewInstructions"
 msgstr ""
-"<p>Questa pagina è accessibile  all'indirizzo:  <blockquote>{$pagesPath} "
-"</blockquote>, dove %PATH% è  il valore scelto. <strong>Nota:</strong> Due "
-"pagine non possono avere lo stesso path. Utilizzare percorsi utilizzati dal "
-"sistema potrebbe causare errori in funzionalità importanti.</p>"
+"<p>Questa pagina è accessibile all'indirizzo: "
+"<blockquote>{$pagesPath} </blockquote>"
+", dove %PATH% è il valore scelto. <strong>Nota:</strong> Due pagine non "
+"possono avere lo stesso path. Utilizzare percorsi già usati dal sistema "
+"potrebbe causare gravi errori di funzionamento.</p>"
 
 msgid "plugins.generic.staticPages.duplicatePath"
 msgstr "Questo path esiste già per una diversa pagina."
