--- a/locale/uk_UA/locale.po
+++ b/locale/uk_UA/locale.po
@@ -11,15 +11,14 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<="
-"4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 3.9.1\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 
 msgid "plugins.generic.staticPages.displayName"
-msgstr "Модуль статичних сторінок"
+msgstr "Плагін статичних сторінок"
 
 msgid "plugins.generic.staticPages.description"
-msgstr "Цей модуль дозволяє керування статичним змістом."
+msgstr "Цей плагін дає змогу керувати статичним змістом."
 
 msgid "plugins.generic.staticPages.staticPages"
 msgstr "Статичні сторінки"
@@ -35,11 +34,11 @@ msgstr "Шлях"
 
 msgid "plugins.generic.staticPages.requirement.tinymce"
 msgstr ""
-"<p><strong>Для отримання можливостей додавання/редагування змісту потрібно "
-"встановити та активувати модуль TinyMCE.</strong></p>"
+"<p><strong>Для отримання можливостей додавання / редагування змісту потрібно "
+"встановити й активувати плагін TinyMCE.</strong></p>"
 
 msgid "plugins.generic.staticPages.editAddContent"
-msgstr "Редагувати/додати зміст"
+msgstr "Редагувати / додати зміст"
 
 msgid "plugins.generic.staticPages.addStaticPage"
 msgstr "Додати статичну сторінку"
@@ -51,28 +50,39 @@ msgid "plugins.generic.staticPages.editStaticPage"
 msgstr "Редагувати статичну сторінку"
 
 msgid "plugins.generic.staticPages.noneCreated"
-msgstr "Статичні сторінки не були створені."
+msgstr "Жодної статичної сторінки не було створено."
 
 msgid "plugins.generic.staticPages.settingInstructions"
-msgstr "У формі нижче відображаються всі створені Вами статичні сторінки.  Ви можете редагувати або видаляти ці сторінки, використовуючи посилання праворуч від них."
+msgstr ""
+"У формі нижче відображаються всі створені Вами статичні сторінки. Ви можете "
+"редагувати або видаляти ці сторінки, використовуючи посилання праворуч від "
+"них."
 
 msgid "plugins.generic.staticPages.editInstructions"
-msgstr "Використовуйте форму нижче для додавання/редагування змісту сторінки."
+msgstr ""
+"Використовуйте форму нижче для додавання / редагування змісту сторінки."
 
 msgid "plugins.generic.staticPages.pathRegEx"
-msgstr "Поле шляху має містити лише латинські літери, цифри та знаки '.', '/', '-', і '_'."
+msgstr ""
+"Поле шляху має містити лише латинські буквено-цифрові знаки плюс '.', '/', '-"
+"' і '_'."
 
 msgid "plugins.generic.staticPages.viewInstructions"
-msgstr "<p>Ця сторінка буде доступна за адресою: <blockquote>{$pagesPath}</blockquote>..., де %PATH% - це шлях, введений вище. <strong>Примітка:</strong> Не може існувати двох сторінок з однаковим шляхом. Використання шляхів, вбудованих у систему, може призвести до втрати доступу до важливих функцій.</p>"
+msgstr ""
+"<p>Ця сторінка буде доступна за адресою: "
+"<blockquote>{$pagesPath}</blockquote>"
+"…, де %PATH% - це шлях, введений вище. <strong>Примітка:</strong> Не може "
+"існувати двох сторінок з однаковим шляхом. Використання шляхів, вбудованих у "
+"систему, може призвести до втрати доступу до важливих функцій.</p>"
 
 msgid "plugins.generic.staticPages.duplicatePath"
-msgstr "Цей шлях вже використовується для іншої статичної сторінки."
+msgstr "Цей шлях уже існує для іншої статичної сторінки."
 
 msgid "plugins.generic.staticPages.pageSaved"
-msgstr "Сторінка успішно збережена."
+msgstr "Сторінку успішно збережено."
 
 msgid "plugins.generic.staticPages.pageDeleted"
-msgstr "Сторінка успішно видалена."
+msgstr "Сторінку успішно видалено."
 
 msgid "plugins.generic.staticPages.noneExist"
-msgstr "Жодних сторінок не було створено"
+msgstr "Жодної сторінки не було створено"
