Try updating language codes

--- a/locale/gl/locale.po
+++ b/locale/gl/locale.po
@@ -4,7 +4,7 @@ msgstr ""
 "Last-Translator: Real Academia Galega <reacagal@gmail.com>\n"
 "Language-Team: Galician <http://translate.pkp.sfu.ca/projects/plugins/static-"
 "pages-plugin/gl_ES/>\n"
-"Language: gl_ES\n"
+"Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
