--- a/locale/ar/locale.po
+++ b/locale/ar/locale.po
@@ -7,7 +7,7 @@ msgstr ""
 "Last-Translator: M. Ali <vorteem@gmail.com>\n"
 "Language-Team: Arabic <http://translate.pkp.sfu.ca/projects/plugins/static-"
 "pages-plugin/ar_IQ/>\n"
-"Language: ar_IQ\n"
+"Language: ar\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
