--- a/locale/ca/locale.po
+++ b/locale/ca/locale.po
@@ -7,7 +7,7 @@ msgstr ""
 "Last-Translator: Jordi LC <jordi.lacruz@uab.cat>\n"
 "Language-Team: Catalan <http://translate.pkp.sfu.ca/projects/plugins/static-"
 "pages-plugin/ca/>\n"
-"Language: ca_ES\n"
+"Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
