--- a/locale/de/locale.po
+++ b/locale/de/locale.po
@@ -7,7 +7,7 @@ msgstr ""
 "Last-Translator: Heike Riegler <heike.riegler@julius-kuehn.de>\n"
 "Language-Team: German <http://translate.pkp.sfu.ca/projects/plugins/static-"
 "pages-plugin/de/>\n"
-"Language: de_DE\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
