--- a/locale/el/locale.po
+++ b/locale/el/locale.po
@@ -6,7 +6,7 @@ msgstr ""
 "PO-Revision-Date: 2019-11-19T11:05:23+00:00\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: \n"
+"Language: el\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
