--- a/locale/en/locale.po
+++ b/locale/en/locale.po
@@ -6,7 +6,7 @@ msgstr ""
 "PO-Revision-Date: 2019-09-30T15:49:00-07:00\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: \n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
