--- a/locale/hu/locale.po
+++ b/locale/hu/locale.po
@@ -7,7 +7,7 @@ msgstr ""
 "Last-Translator: Gabor Klinger <ojshelp@konyvtar.mta.hu>\n"
 "Language-Team: Hungarian <http://translate.pkp.sfu.ca/projects/plugins/"
 "static-pages-plugin/hu/>\n"
-"Language: hu_HU\n"
+"Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
