--- a/locale/it/locale.po
+++ b/locale/it/locale.po
@@ -7,7 +7,7 @@ msgstr ""
 "Last-Translator: Fulvio Delle Donne <fulviodelledonne@libero.it>\n"
 "Language-Team: Italian <http://translate.pkp.sfu.ca/projects/plugins/static-"
 "pages-plugin/it/>\n"
-"Language: it_IT\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
