--- a/locale/ja/locale.po
+++ b/locale/ja/locale.po
@@ -6,7 +6,7 @@ msgstr ""
 "PO-Revision-Date: 2021-12-11 17:15+0000\n"
 "Last-Translator: TAKASHI IMAGIRE <imagire@gmail.com>\n"
 "Language-Team: \n"
-"Language: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
