--- a/locale/ka/locale.po
+++ b/locale/ka/locale.po
@@ -4,7 +4,7 @@ msgstr ""
 "Last-Translator: Dimitri Gogelia <dimitri.gogelia@iliauni.edu.ge>\n"
 "Language-Team: Georgian <http://translate.pkp.sfu.ca/projects/plugins/static-"
 "pages-plugin/ka_GE/>\n"
-"Language: ka_GE\n"
+"Language: ka\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
