--- a/locale/mk/locale.po
+++ b/locale/mk/locale.po
@@ -4,7 +4,7 @@ msgstr ""
 "Last-Translator: Teodora Fildishevska <t.fildishevska@gmail.com>\n"
 "Language-Team: Macedonian <http://translate.pkp.sfu.ca/projects/plugins/"
 "static-pages-plugin/mk_MK/>\n"
-"Language: mk_MK\n"
+"Language: mk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
