--- a/locale/nl/locale.po
+++ b/locale/nl/locale.po
@@ -7,7 +7,7 @@ msgstr ""
 "Last-Translator: Hans Spijker <hans.spijker@huygens.knaw.nl>\n"
 "Language-Team: Dutch <http://translate.pkp.sfu.ca/projects/plugins/static-"
 "pages-plugin/nl/>\n"
-"Language: nl_NL\n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
