--- a/locale/sv/locale.po
+++ b/locale/sv/locale.po
@@ -4,7 +4,7 @@ msgstr ""
 "Last-Translator: Viveka Svensson <viveka.svensson@lnu.se>\n"
 "Language-Team: Swedish <http://translate.pkp.sfu.ca/projects/plugins/static-"
 "pages-plugin/sv_SE/>\n"
-"Language: sv_SE\n"
+"Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
