--- a/locale/vi/locale.po
+++ b/locale/vi/locale.po
@@ -4,7 +4,7 @@ msgstr ""
 "Last-Translator: Tran Ngoc Trung <khuchatthienduong@gmail.com>\n"
 "Language-Team: Vietnamese <http://translate.pkp.sfu.ca/projects/plugins/"
 "static-pages-plugin/vi_VN/>\n"
-"Language: vi_VN\n"
+"Language: vi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
